--- a/mobile-app/src/pages/profile/profile.scss
+++ b/mobile-app/src/pages/profile/profile.scss
@@ -1,11 +1,19 @@
 page-profile {
     ion-card{
-        width: 100%;
-        height: 100%;
+        
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px;
+        margin: 10px;
+        position: fixed;
+        overflow: hidden;
+        bottom: 0px;
+        top:0px;
+        right: 0px;
+        left: 0px;
     }
     .bg-image {
         background-color: rgb(85, 182, 247);
-        height: 350px;
+        height: 40%;
         width: 100%;
         text-align: center;
     }
@@ -16,9 +24,16 @@ page-profile {
         border-radius: 50%;
         border: 3px solid;
         border-color: rgb(255, 255, 255);
-        height: 100%;
-        width: 100%;
+        height: 80%;
+        width: 80%;
     }
+
+    .user-detail {
+        max-width: 65%;
+        margin: auto;
+    }
+
+
     ion-card.cards-list-demo ion-card-header {
         color: map-get($colors, primary);
       }
