--- a/mobile-app/src/pages/messaging/messaging.scss
+++ b/mobile-app/src/pages/messaging/messaging.scss
@@ -1,55 +1,7 @@
 page-messaging {
-
-    .messages{
-        border-top-left-radius: 4px;
-        border-top-right-radius: 4px;
-        margin: 10px;
-        position: fixed;
-        overflow: hidden;
-        bottom: 0px;
-        top:0px;
-        right: 0px;
-        left: 0px;
-        font-size: 40px;
-
-    }
-
-
-    .neighbour{
-        background-color: #f5f5f5;
-        margin: 2px;
-        position: absolute;
-        align-self: center;
-        width: 100%;
-        min-width: max-content;
-    }
-
-    .card{
-        border-radius: 15px;
-        overflow: hidden;
-    }
-
-    .header{
-        background-color: rgb(85, 182, 247);
-    }
-
-    .msg{
-        border-top-left-radius: 14px;
-        border-top-right-radius: 14px;
-        border-bottom-right-radius: 14px;
-        border-bottom-left-radius: 14px;
-        background-color: #81b885;
-        max-width: 750px;
-        width: auto;
-    }
-
-    .myMsg{
-        border-top-left-radius: 14px;
-        border-top-right-radius: 14px;
-        border-bottom-right-radius: 14px;
-        border-bottom-left-radius: 14px;
-        background-color: #adadad;
-       max-width: 750px;
-       width: auto;
-    }
+   .chat-history{
+        margin: auto;
+        position: relative;
+        
+   }
 }
