--- a/mobile-apps/ionic/src/pages/home/home.scss
+++ b/mobile-apps/ionic/src/pages/home/home.scss
@@ -1,3 +1,24 @@
-page-home {
+.list-container {
+    display: flex;
+}
 
+.home-button-container {
+    padding: 10px;
+}
+
+.home-button {
+    background-color: #eee;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    font-size: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+
+    ion-icon {
+      font-size: 20px;
+    }
 }
